<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_form"
        android:title="@string/title_plan" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_favor"
        android:title="@string/title_like"/>
    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_cascades"
        android:title="@string/title_categories" />
</menu>