<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".ui.daily.DailyFragment">
    <TextView
        android:id="@+id/dailyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        android:text="@string/daily_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/dailyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/calorieValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:text="@string/default_Calorie"
        app:drawableStartCompat="@drawable/calorie_text"/>

    <ImageButton
        android:id="@+id/dailyLikeBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ic_like"
        android:contentDescription="@string/like_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDisplay"
        tools:ignore="RedundantDescriptionCheck" />
    <TextView
        android:id="@+id/dailyHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Heading"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/calorieValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/dailySummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/dailyHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/dailyPlanBtn"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/add_to_plan"
        android:textColor="@color/default_color"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/detailBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailySummary" />
    <Button
        android:id="@+id/detailBtn"
        android:layout_width="wrap_content"
        android:minWidth="120dp"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/btn_choose"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/dailySummary"
        app:layout_constraintStart_toEndOf="@+id/dailyPlanBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>