<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:text="@string/let_s_find"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/dialog_close"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_close"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableEndCompat="@drawable/tableware_text_25" />
    <ImageButton
        android:id="@+id/dialog_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_close"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_can_be_cooked"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/dialog_close"
        app:layout_constraintStart_toStartOf="parent"/>
    <include
        android:id="@+id/step_bar"
        layout="@layout/step_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/step1_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/step_1_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/step_bar"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/step2_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/step_2_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/step3_text"
        app:layout_constraintTop_toBottomOf="@id/step_bar"
        app:layout_constraintStart_toEndOf="@+id/step1_text"/>
    <TextView
        android:id="@+id/step3_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/step_3_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/step4_text"
        app:layout_constraintTop_toBottomOf="@id/step_bar"
        app:layout_constraintStart_toEndOf="@id/step2_text"/>
    <TextView
        android:id="@+id/step4_text"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/step_4_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_bar" />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/close_color"
        app:layout_constraintTop_toTopOf="@id/recyclerview"
        app:layout_constraintBottom_toBottomOf="@id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_marginVertical="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/step1_text"
        app:layout_constraintStart_toEndOf="@id/imgl"
        app:layout_constraintEnd_toStartOf="@id/imgr"
        android:layout_height="match_parent"/>
    <ImageView
        android:id="@+id/imgl"
        android:background="@drawable/ic_arrow_left_bold"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recyclerview"
        app:layout_constraintTop_toTopOf="@id/recyclerview"
        app:layout_constraintBottom_toBottomOf="@id/recyclerview"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo" />
    <ImageView
        android:id="@+id/imgr"
        android:background="@drawable/ic_arrow_right_bold"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recyclerview"
        app:layout_constraintTop_toTopOf="@id/recyclerview"
        app:layout_constraintBottom_toBottomOf="@id/recyclerview"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_ingredients"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerview"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="100dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/empty_list"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>