<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/step1"
        android:text="@string/_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:button="@null"
        android:clickable="false"
        android:checked="true"
        android:background="@drawable/step_icon"
        android:textColor="@color/line"/>
    <View
        android:id="@+id/line1"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/line_false"/>
    <CheckBox
        android:id="@+id/step2"
        android:text="@string/_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:button="@null"
        android:clickable="false"
        android:checked="false"
        android:background="@drawable/step_icon"
        android:textColor="@color/line_false"/>
    <View
        android:id="@+id/line2"
        android:background="@color/line_false"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="3dp"/>
    <CheckBox
        android:id="@+id/step3"
        android:text="@string/_3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:button="@null"
        android:clickable="false"
        android:checked="false"
        android:background="@drawable/step_icon"
        android:textColor="@color/line_false"/>
    <View
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/line_false"
        android:layout_weight="1"/>
    <CheckBox
        android:id="@+id/step4"
        android:text="@string/_4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:button="@null"
        android:clickable="false"
        android:checked="false"
        android:background="@drawable/step_icon"
        android:textColor="@color/line_false"/>
</LinearLayout>