<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/dailyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        android:text="@string/daily_heading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/imageDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="260dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/dailyText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageDisplay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:text="@string/default_Calorie"
        app:drawableStartCompat="@drawable/ic_calorie"/>

</androidx.constraintlayout.widget.ConstraintLayout>