<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnPrimary"
    android:elevation="2dp"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="64dp"
        android:maxWidth="64dp"
        android:maxHeight="64dp"
        android:layout_height="64dp"
        android:background="@color/black"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:gravity="end"
        android:textStyle="bold"
        android:lines="1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/userId"
        app:layout_constraintStart_toEndOf="@+id/avatarImage"
        app:layout_constraintTop_toTopOf="@id/avatarImage"/>
    <TextView
        android:id="@+id/userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textColor="@color/white"
        android:gravity="end"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="@+id/avatarImage"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage" />
</androidx.constraintlayout.widget.ConstraintLayout>