<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/detailImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="260dp"
            android:scaleType="centerCrop"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Heading"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="60dp"
            android:textSize="20sp"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="@id/detailLikeBtn"
            app:layout_constraintTop_toBottomOf="@id/detailImg"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/detailCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_Calorie"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/detailName"
            app:layout_constraintStart_toStartOf="@id/detailName"
            app:drawableStartCompat="@drawable/calorie_text" />
        <TextView
            android:id="@+id/detailSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            app:layout_constraintStart_toStartOf="@id/detailName"
            app:layout_constraintTop_toBottomOf="@id/detailCal"/>
        <!-- TODO -->
        <CheckBox
            android:id="@+id/detailLikeBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="8dp"
            android:button="@null"
            android:background="@drawable/like_heart_icon"
            app:layout_constraintTop_toBottomOf="@+id/detailImg"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>